# trying-out-marimo

./: linear_regression_theory.ipynb  linear_regression_theory_marimo.py  pyproject.toml  requirements.txt  simple_notebook.py
__marimo__/session/: simple_notebook.py.json
